--- a/mkosi.conf
+++ b/mkosi.conf
@@ -6,6 +6,10 @@ Format=gpt_squashfs
 ManifestFormat=json,changelog
 Bootable=true
 Verity=yes
+# Enable Secure Boot with own PKI
+SecureBoot=yes
+SecureBootKey=pki/db.key
+SecureBootCertificate=pki/db.crt
 
 # Either use volatile /var
 KernelCommandLine=systemd.volatile=state
@@ -15,6 +19,8 @@ KernelCommandLine=systemd.volatile=state
 
 [Content]
 Autologin=true
+# Secure Boot / EFI related packages for manual enrollment / verification of Secure Boot
+Packages=sbsigntools,efitools,mokutil
 
 [Host]
 QemuHeadless=true
