Add signed-shim as first stage boot loader

--- a/mkosi.conf
+++ b/mkosi.conf
@@ -20,7 +20,7 @@ KernelCommandLine=systemd.volatile=state
 [Content]
 Autologin=true
 # Secure Boot / EFI related packages for manual enrollment / verification of Secure Boot
-Packages=sbsigntools,efitools,mokutil
+Packages=e2fsprogs,sbsigntools,efitools,mokutil,tpm2-tools
 
 [Host]
 QemuHeadless=true
